@@ -1,5 +1,12 @@
 2003-01-11  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>
 
+	* [w3m-dev 03625] keymap key SEARCH string
+	* main.c (srch): accept command argument
+		(reMark): accept command argument
+	* Bonus/google.cgi: added
+
+2003-01-11  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>
+
 	* [w3m-dev 03622] Re: Error occured while reset
 	* file.c (uncompress_stream): child process initialized
 	* terms.c (close_tty): close unless stdin,out,err
@@ -6268,4 +6275,4 @@ a	* [w3m-dev 03276] compile error on EWS4800
 	* release-0-2-1
 	* import w3m-0.2.1
 
-$Id: ChangeLog,v 1.663 2003/01/10 16:16:44 ukai Exp $
+$Id: ChangeLog,v 1.664 2003/01/10 16:23:52 ukai Exp $
